tests/effects-corpus/corpus/accept/polymorphic_through_handler.pdx
// Row-polymorphic function called inside handler
module PolyThroughHandler = structure {
  effect Io {
    op port_read  : (u16) -> u8
  }

  let read_status : forall e. (u16) -> u8 !{Io | e} =
    fn (port : u16) -> 0

  let drain_keyboard : (unit) -> u8 !{} =
    fn (_ : unit) ->
      with io_handler handle Io {
        read_status(0x64)
      }
}
